# PracticasMH

./: LICENSE  README.md
Práctica 1/software/FUENTES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Práctica 1/software/FUENTES/INCLUDE/: aux.h
Práctica 1/software/FUENTES/SRC/: aux.cpp  main.cpp  practica1.cpp
Práctica 2/software/FUENTES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Práctica 2/software/FUENTES/INCLUDE/: practica1.hpp
Práctica 2/software/FUENTES/SRC/: aux.cpp  main.cpp  practica1.cpp  practica2.cpp
Práctica 3/software/FUENTES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Práctica 3/software/FUENTES/INCLUDE/: aux.h  practica2.hpp  practica3.hpp
Práctica 3/software/FUENTES/SRC/: main.cpp  practica1.cpp  practica3.cpp
